# vetonet

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  LICENSE-COMMERCIAL.md  PRIVACY.md  README.md  SECURITY.md  advanced_pentest_results.json  api.py  app.py  elite_pentest_results.json  fuzzer_results.json  main.py  pyproject.toml  railway.json  requirements.txt  test_aggressive.py  test_creative_attacks.py  test_edge_cases.py
.github/workflows/: ci.yml
demo/: __init__.py  attack_demo.py  live_demo.py  mock_paypal.py  shopping_agent.py
docs/: ARCHITECTURE.md  OUTREACH.md
examples/: __init__.py  agentkit_demo.py  hello_world.py  quickstart_api.py
migrations/: 001_api_keys.sql
playground/: .env.example  index.html  package-lock.json  package.json  vite.config.js
playground/src/: App.jsx  AuthPage.jsx  ChallengePage.jsx  LandingPage.jsx  config.js  index.css  main.jsx
scripts/: add_adversarial_and_retrain.py  add_bypass_patterns.py  advanced_pentest.py  adversarial_eval.py  attack_agent.py  debug_classifier.py  elite_pentest.py  export_training_data.py  fuzzer.py  generate_adversarial_tests.py  generate_legitimate_data.py  generate_training_data.py  generate_training_data_v2.py  mega_pentest.py  migrate_to_supabase.py  pentest.py  run_pentest.py  supabase_rls.sql  supabase_schema.sql  test_patched.py  train_classifier.py  upload_model.py  verify_patches.py
tests/: __init__.py  conftest.py  integration_test_anthropic.py  integration_test_crewai.py  integration_test_openai.py  scenarios.py  test_deterministic.py  test_engine.py  test_engine_modes.py  test_env_example.py  test_fail_open.py  test_forgot_password.py  test_json_utils.py  test_models.py  test_no_console_log.py  test_no_railway_urls.py  test_no_vetonet_dev.py  test_semantic_security.py  test_supabase_rls.py  test_text_sanitize.py
vetonet/: __init__.py  auth.py  cli.py  config.py  db.py  engine.py  models.py  normalizer.py  ratelimit.py  telemetry.py  text_sanitize.py
vetonet/checks/: __init__.py  classifier.py  deterministic.py  semantic.py
vetonet/integrations/: __init__.py  agentkit.py  fail_open.py  session.py
vetonet/integrations/anthropic/: __init__.py  guard.py  processor.py
vetonet/integrations/crewai/: __init__.py  crew.py  decorator.py  guard.py
vetonet/integrations/langchain/: __init__.py  async_utils.py  callback.py  circuit.py  client.py  decorator.py  exceptions.py  guard.py  intent.py  registry.py  types.py
vetonet/integrations/mcp/: __init__.py  server.py
vetonet/integrations/openai/: __init__.py  decorator.py  guard.py  processor.py
vetonet/integrations/world/: __init__.py  agentkit.py  verify.py
vetonet/integrations/x402/: __init__.py  middleware.py  validator.py
vetonet/llm/: __init__.py  anthropic.py  client.py  groq.py  json_utils.py
