[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vetonet"
version = "0.1.0"
description = "Semantic Firewall for AI Agent Transactions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "VetoNet" }
]
keywords = [
    "ai",
    "security",
    "agents",
    "firewall",
    "prompt-injection",
    "intent-drift",
    "llm",
    "crypto",
    "web3"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
groq = ["groq>=0.4.0"]
anthropic = ["anthropic>=0.40.0"]
ollama = ["requests>=2.28.0"]

[project.urls]
Homepage = "https://github.com/takenosuke-code/vetonet"
Documentation = "https://github.com/takenosuke-code/vetonet#readme"
Repository = "https://github.com/takenosuke-code/vetonet"
Issues = "https://github.com/takenosuke-code/vetonet/issues"

[project.scripts]
vetonet = "vetonet.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vetonet*"]

[tool.ruff]
line-length = 100
target-version = "py310"
